modified:   dest/script.js 	modified:   index.html 	modified:   src/script.ts

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
                     <input type="text" class="form-control" id="Task-context">
                 </div>
                 <div class="mb-3 form-check">
-                    <input type="checkbox" class="form-check-input" id="Task-importent">
-                    <label class="form-check-label" for="Task-importent">Importent</label>
+                    <input type="checkbox" class="form-check-input" id="Task-important">
+                    <label class="form-check-label" for="Task-important">Important</label>
                 </div>
                 <button type="submit" class="btn btn-primary" id="add-task">Add</button>
             </form>
@@ -77,8 +77,8 @@
                                 <input type="text" class="form-control" id="task-context-edit">
                             </div>
                             <div class="mb-3 form-check">
-                                <input type="checkbox" class="form-check-input" id="importent-edit">
-                                <label class="form-check-label" for="importent-edit">Importent</label>
+                                <input type="checkbox" class="form-check-input" id="important-edit">
+                                <label class="form-check-label" for="important-edit">Important</label>
                             </div>
                         </form>
 
